--- a/podcasts/templates/pagination.html
+++ b/podcasts/templates/pagination.html
@@ -1,4 +1,4 @@
-<div class="col-12 pagination">
+<div class="col-12 pages-buttons">
   {% if results.pagination.start %}
     <a class="btn-dope options-button" href="{{ results.urls.full_url }}">
       <i class="fas fa-angle-double-left"></i>
