--- a/podcasts/templates/showpod.html
+++ b/podcasts/templates/showpod.html
@@ -12,23 +12,6 @@ Listen to episodes of {{ podcast.title }} on dopepod
       onerror="this.src='http://{{ podcast.artworkUrl }}380x380bb.jpg'" />
     </div>
     <div class="col-12 col-lg-5" id="showpod-c" data-podid="{{ podcast.podid }}">
-      <button class="btn-dope results-back" onclick="window.history.back()">
-        <i class="fas fa-arrow-circle-left"></i>
-      </button>
-      {% if user.is_authenticated %}
-        <form class="d-inline" id="sub-form" action="{% url 'subscribe' %}" method="POST">
-          {% csrf_token %}
-          <input type="hidden" name="podid" value="{{ podcast.podid }}">
-          {% if podcast.is_subscribed %}
-            <button type="submit" class="btn-dope sub-button">
-              Unsubscribe
-          {% else %}
-            <button type="submit" class="btn-dope active sub-button">
-              Subscribe
-          {% endif %}
-          </button>
-        </form>
-      {% endif %}
       <!-- TODO fix these ids -->
       <h1 id="showpod-title">
         {{ podcast.title }}
@@ -96,18 +79,36 @@ Listen to episodes of {{ podcast.title }} on dopepod
           </em>
         </li>
       </ul>
-      <div class="showpod-options">
-        <a class="btn-dope episodes-button toggle" data-toggle="collapse" href="#episodes-collapse" aria-expanded="true" aria-controls="episodes-collapse">
-          {% if request.is_ajax %}
-            {% include 'button-loading.html' %}
+    </div>
+    <div class="col-12 showpod-buttons">
+      <button class="btn-dope showpod-back" onclick="window.history.back()">
+        <i class="fas fa-arrow-circle-left"></i>
+      </button>
+      {% if user.is_authenticated %}
+        <form class="d-inline" id="sub-form" action="{% url 'subscribe' %}" method="POST">
+          {% csrf_token %}
+          <input type="hidden" name="podid" value="{{ podcast.podid }}">
+          {% if podcast.is_subscribed %}
+            <button type="submit" class="btn-dope sub-button">
+              Unsubscribe
+            </button>
           {% else %}
-            Episodes
+            <button type="submit" class="btn-dope active sub-button">
+              Subscribe
+            </button>
           {% endif %}
-        </a>
-        <a class="btn-dope reviews-button toggle" data-toggle="collapse" href="#reviews-collapse" aria-expanded="false" aria-controls="reviews-collapse">
-          Reviews
-        </a>
-      </div>
+        </form>
+      {% endif %}
+      <a class="btn-dope episodes-button toggle" data-toggle="collapse" href="#episodes-collapse" aria-expanded="true" aria-controls="episodes-collapse">
+        {% if request.is_ajax %}
+          {% include 'button_loading.html' %}
+        {% else %}
+          Episodes
+        {% endif %}
+      </a>
+      <a class="btn-dope reviews-button toggle" data-toggle="collapse" href="#reviews-collapse" aria-expanded="false" aria-controls="reviews-collapse">
+        Reviews
+      </a>
     </div>
     <div class="col-12 showpod-collapse collapse show" id="episodes-collapse">
       {% if results.episodes %}
