--- a/podcasts/templates/subscriptions.html
+++ b/podcasts/templates/subscriptions.html
@@ -2,7 +2,7 @@
   {% for subscription in results.podcasts %}
     {% with subscription.podcast as podcast %}
       <div class="col-12 col-md-4 subscriptions-box">
-        <div class="subscriptions-result clearfix">
+        <div class="subscriptions-result clearfix" data-podid="{{ podcast.podid }}">
           <a class="showpod" data-podid="{{ podcast.podid }}" href="/showpod/{{ podcast.podid }}/">
             <img class="img-fluid" src="https://dopepod.me/img/{{ podcast.artworkUrl }}100x100bb.jpg"
             onerror="this.src='http://{{ podcast.artworkUrl }}100x100bb.jpg'" />
@@ -16,7 +16,14 @@
             <span>Last updated: </span>
             {{ subscription.last_updated|date:'d-m-Y H:i' }}
           </p>
-          <button class="btn-dope select-subscription" data-podid="{{ podcast.podid }}">
+          <!-- <form class="d-inline" id="sub-form" action="{% url 'subscribe' %}" method="POST">
+            {% csrf_token %}
+            <input type="hidden" name="podid" value="{{ podcast.podid }}">
+            <button type="submit" class="btn-dope sub-button">
+              Unsubscribe
+            </button>
+          </form> -->
+          <button class="btn-dope select-subscription">
             Select
           </button>
         </div>
