--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -67,6 +67,7 @@
       </div>
       <div class="loaders d-none">
         {% include 'circle_loading.html' %}
+        {% include 'button_loading.html' %}
       </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
