--- a/index/static/style.css
+++ b/index/static/style.css
@@ -3,10 +3,10 @@ body {
   font-size: 14px;
   background: rgb(255, 250, 240);
   transition: background 0.5s ease;
+  font-family: 'Exo', sans-serif;
 }
 a {
   color: rgb(0, 191, 165);
-  font-weight: 600;
 }
 a:hover {
   color: rgb(0, 105, 92);
@@ -50,11 +50,11 @@ a:hover {
   font-size: 16px!important;
   color: inherit;
   border: 2px solid rgba(0, 191, 165, 1);
-  min-width: 34px;
-  height: 33px;
-  padding: 2px 8px;
+  min-width: 32px;
+  height: 32px;
+  padding: 3px 6px;
   cursor: pointer;
-  font-weight: 600;
+  font-weight: 500;
   background: inherit;
   border-radius: .25rem;
   text-align: center;
@@ -713,6 +713,7 @@ button.btn-dope {
 .results-header h1 {
   font-size: 24px;
   margin: 0;
+  margin-top: 4px;
 }
 .results-buttons, .options-buttons {
   justify-content: flex-end;
@@ -795,6 +796,8 @@ button.btn-dope {
   text-align: center;
   height: 34px;
   width: 34px;
+  padding-top: 2px;
+  padding-left: 1px;
   font-size: 19px!important;
   font-weight: 600;
   border-radius: 50%;
