--- a/podcasts/templates/search.html
+++ b/podcasts/templates/search.html
@@ -9,11 +9,16 @@
           <img class="img-fluid" src="https://dopepod.me/img/{{ podcast.artworkUrl }}200x200bb.jpg"
           onerror="this.src='http://{{ podcast.artworkUrl }}200x200bb.jpg'" />
           <h1>
-            {{ podcast.title }}
+            <strong>
+              {{ podcast.title }}
+            </strong>
           </h1>
-          <p>
-            by {{ podcast.artist }}
-          </p>
+          <h2>
+            by
+            <strong>
+              {{ podcast.artist }}
+            </strong>
+          </h2>
       </a>
     </div>
   {% endfor %}
