--- a/index/templates/logo.html
+++ b/index/templates/logo.html
@@ -1,4 +1,4 @@
-<div class="logo-wrapper">
+<div class="login-buttons">
   <button class="btn-dope active">d</button>
   <button class="btn-dope active">o</button>
   <button class="btn-dope active">p</button>
