--- a/podcasts/templates/results_base.html
+++ b/podcasts/templates/results_base.html
@@ -38,7 +38,7 @@ dopepod
       </h1>
     </div>
   </div>
-  <div class="row collapse show results-wrapper" id="results-collapse{{ results.drop }}">
+  <div class="row collapse show" id="results-collapse{{ results.drop }}">
     <div class="col-12 results-buttons">
       {% if results.view == 'grid' or results.view == 'list' %}
         <a class="btn-dope view-button active" href="{{ results.urls.full_url }}">
