--- a/index/templates/dashboard.html
+++ b/index/templates/dashboard.html
@@ -5,7 +5,7 @@ dopepod
 {% endblock %}
 
 {% block center-stage %}
-<div class="col-12 results color-5-trans" id="dashboard">
+<div class="col-12 results color-5-trans dashboard">
   <h1>
     Dashboard
   </h1>
