--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -1,33 +1,33 @@
 {% if player.episode %}
 <div class="container px-0">
-  <div class="col-12 col-md-4 ml-auto">
-    <div class="color-4-trans" id="player-wrapper">
+  <div class="col-12 col-lg-4 ml-auto">
+    <div class="color-4-trans player-wrapper">
       <a class="showpod" data-podid="{{ player.episode.podcast.podid }}" href="{% url 'showpod' podid=player.episode.podcast.podid %}">
         <img class="img-fluid" src="https://dopepod.me/img/{{ player.episode.podcast.artworkUrl }}100x100bb.jpg"
         onerror="this.src='http://{{ podcast.artworkUrl }}100x100bb.jpg'" />
       </a>
-      <div id="player-buttons">
-        <a class="btn-dope" id="player-minimize" href="#" aria-label="Minimize">
+      <div class="player-buttons">
+        <a class="btn-dope player-minimize" href="#" aria-label="Minimize">
           <i class="fas fa-minus-circle"></i>
         </a>
-        <a class="btn-dope" id="player-close" href="#" aria-label="Close">
+        <a class="btn-dope player-close" href="#" aria-label="Close">
           <i class="fas fa-times-circle"></i>
         </a>
       </div>
       <a class="showpod" data-podid="{{ player.episode.podcast.podid }}" href="{% url 'showpod' podid=player.episode.podcast.podid %}">
-        <div id="player-title">
+        <div class="player-title">
           <h1>
             {{ player.episode.podcast.title }}
           </h1>
         </div>
       </a>
-      <p id="player-date">
+      <p class="player-date">
         {{ player.episode.pubDate|date:'d-m-Y H:i' }}
       </p>
-      <p id="player-episode">
+      <p class="player-episode">
         {{ player.episode.title }}
       </p>
-      <div id="audio-el">
+      <div class="audio-el">
         <audio controls preload="metadata" autoplay>
           <source src="{{ player.episode.url }}"/>
         </audio>
@@ -36,9 +36,9 @@
   </div>
 </div>
 {% elif cookie_banner %}
-<div class="col-12 color-4-trans" id="cookie-banner">
+<div class="col-12 color-4-trans cookie-banner">
   <h1>This site uses cookies</h1>
-  <button class="btn-dope" onclick="cookieBannerClose()" id="cookie-banner-close">
+  <button class="btn-dope" onclick="cookieBannerClose()">
     <i class="fas fa-times-circle"></i>
   </button>
 </div>
